--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -7,9 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="extended mind &ndash; task and note organizer that keeps you zen">
   <title>extended mind</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/animate-animo.css" >
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/em-animation.css">
 
-  <link rel="stylesheet" href="bootstrap.min.css"/>
-  <link href="custom.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
   <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
@@ -61,6 +64,121 @@
 
 <body>
 
+  <header>
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <div class="logo"><a href><span class="icon-logo"></span></a></div>
+        </li>
+        <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+      </ul>
+      <section class="top-bar-section">
+        <ul class="right">
+          <li class="active"><a href="#">home</a></li>
+          <li><a href="manifesto.html">manifesto</a></li>
+          <li><a href="http://www.extendedmind.org" target="_blank">blog</a></li>
+          <li><a href="mailto:info@ext.md">contact</a></li>
+          <li><a href="https://ext.md/login">log in</a></li>
+        </ul>
+      </section>
+    </nav>
+  </header>
+  <div class="main">
+    <div id="em-animation">
+      <audio id="theme">
+        <source src="audio/theme.ogg" type="audio/ogg">
+        <source src="audio/theme.m4a" type="audio/mp4">
+      </audio>
+      <span id="em-animation-play" onclick="playExtendedMindAnimation()" class="icon-play"></span>
+      <div id="em-animation-0">
+        <span class="icon-logo-text"></span></br></br>
+        <span>task and note organizer that keeps you zen</span>
+      </div>
+      <div id="em-animation-1" class="hide">
+        <span>what if you never had to forget anything again?</span>
+      </div>
+      <div id="em-animation-2" class="hide">
+        <span>what if software was an extension of you?</span>
+      </div>
+      <div id="em-animation-3" class="hide">
+        <span>your <b>mind</b> is bigger than you think</span>
+      </div>
+      <div id="em-animation-4" class="hide">
+        <span>but it is limited</span>
+      </div>
+      <div id="em-animation-5" class="hide">
+        <span>you can subconsciously process <b>11.2 million</b> bits of information in a second</span>
+      </div>
+      <div id="em-animation-6" class="hide">
+        <span>consciously: only <b>40</b></span>
+      </div>
+      <div id="em-animation-7" class="hide">
+        <span>we know how the <b>mind</b> works</span>
+      </div>
+      <div id="em-animation-8" class="hide">
+        <span>yet we design our tools the way software works</span>
+      </div>
+      <div id="em-animation-9" class="hide">
+        <span>it's time for a new perspective</span>
+      </div>
+      <div id="em-animation-10" class="hide">
+        <span>it's time to let the biological mind do what it does best:</span>
+      </div>
+      <div id="em-animation-11" class="hide">
+        <span id="em-animation-11-create" class="hidden">create</span>
+        <span id="em-animation-11-connect" class="hidden">connect</span>
+        <span id="em-animation-11-care" class="hidden">care</span>
+      </div>
+      <div id="em-animation-12" class="hide">
+        <span>it's time for the digital mind to do what it does best:</span>
+      </div>
+      <div id="em-animation-13" class="hide">
+        <span id="em-animation-13-focus" class="hidden">focus</span>
+        <span id="em-animation-13-organize" class="hidden">organize</span>
+        <span id="em-animation-13-store" class="hidden">store</span>
+      </div>
+      <div id="em-animation-14" class="hide">
+        <span>this is not a piece of software</span>
+      </div>
+      <div id="em-animation-15" class="hide">
+        <span>this is an <b>extension</b> to your <b>mind</b></span>
+      </div>
+      <div id="em-animation-16" class="hide">
+        <span id="em-animation-16-change" class="hidden">change</span><br/>
+        <span id="em-animation-16-way" class="hidden">the way</span><br/>
+        <span id="em-animation-16-you" class="hidden">you</span><br/>
+        <span id="em-animation-16-think" class="hidden">think</span>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="centered">
+      <a href class="button">begin</a>
+    </div>
+    <div class="right">
+      <div onclick="var audio = document.getElementById('theme');
+                    if (audio.muted){
+                      audio.muted = false;
+                      this.firstElementChild.className = 'icon-volume-mute';
+                    }
+                    else{
+                      audio.muted = true;
+                      this.firstElementChild.className = 'icon-volume-up';
+                    }">
+        <span id="volume" class="icon-volume-mute hide"></span>
+      </div>
+    </div>
+  </footer>
+
+  <script type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js'></script>
+  <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
+  <script type='text/javascript' src='js/fastclick.js'></script>
+  <script type="text/javascript" src="js/animo.min.js"></script>
+  <script type='text/javascript' src='js/foundation.min.js'></script>
+  <script type="text/javascript" src="js/em-animation.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
 
 </body>
 </html>
