Use CDN for fastclick

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -172,7 +172,7 @@
 
   <script type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
-  <script type='text/javascript' src='js/fastclick.js'></script>
+  <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js'></script>
   <script type="text/javascript" src="js/animo.min.js"></script>
   <script type='text/javascript' src='js/foundation.min.js'></script>
   <script type="text/javascript" src="js/em-animation.js"></script>
