--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -1,5 +1,6 @@
 <div class="container-content--outer" list-container>
-  <section class="container-content" list="getTasksArray('context', {id: context && context.trans.uuid})">
+  <section class="container-content" list="getTasksArray('context', {id: context && context.trans.uuid})"
+    list-options="{hideItemDefault: true}">
     <div class="group-mixed heading vertically-centered">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
