New settings feature. Moved version info, general settings and this device's settings from user settings to here.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -140,6 +140,7 @@
   <script src="static/app/main/PageNotFoundController.js"></script>
   <script src="static/app/main/RecurringEditorController.js"></script>
   <script src="static/app/main/SynchronizeService.js"></script>
+  <script src="static/app/main/SettingsController.js"></script>
   <script src="static/app/main/ToolbarController.js"></script>
   <script src="static/app/main/TrashController.js"></script>
 
