--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -15,6 +15,7 @@
         <div ng-if="isFeatureLoaded('lists')" ng-include="urlBase + 'app/lists/listsSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('list')" ng-include="urlBase + 'app/lists/listSlides.html'" include-replace></div>
         <div ng-if="isFeatureActive('trash')" ng-include="urlBase + 'app/main/trash.html'" include-replace></div>
+        <div ng-if="isFeatureActive('settings')" ng-include="urlBase + 'app/main/settings.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('admin')" ng-include="urlBase + 'app/admin/admin.html'" include-replace></div>
         <div ng-if="syncState === 'active'" class="container-fluid--inner">
           <div class="loading-animation" loading-animation></div>
