--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -56,9 +56,13 @@
     <div class="container-menu--push"></div>
   </div>
   <div class="container-menu--bottom">
-    <a href class="link-menu height-large row onboarding-hide" ng-click="gotoFeature('trash')"
+    <a href class="link-menu row onboarding-hide" ng-click="gotoFeature('trash')"
       ng-class="isFeatureActive('trash') ? 'highlighted' : 'downplayed'">
-      <span class="text-navigation-menu-small">trash</h4>
+      <span class="text-navigation-menu-small">trash</span>
+    </a>
+    <a href class="link-menu row onboarding-hide" ng-click="gotoFeature('settings')"
+      ng-class="isFeatureActive('setting') ? 'highlighted' : 'downplayed'">
+      <span class="text-navigation-menu-small">settings</span>
     </a>
   </div>
 </div>
