Working animation also in Cordova

--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -26,6 +26,8 @@
 
   <title>extended mind</title>
   <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/animate-animo.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/em-animation.css"/>
   <script src="cordova.js"></script>
   <script>
     var packaging = "android-cordova";
@@ -53,5 +55,7 @@
 <body onload="onLoad()">
   <div class="android" root-view></div>
   <script src="static/${project.version}/em.min.js"></script>
+  <script src="static/${project.version}/js/animo.min.js"></script>
+  <script src="static/${project.version}/js/em-animation.js"></script>
 </body>
 </html>
