--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet/less" href="static/less/em.less"/>
   <script src="static/lib/less/less-min.js"></script>
   <link rel="shortcut icon" href="landing/favicon.ico"/>
+
+  <link rel="stylesheet" href="static/css/animate-animo.css"/>
+  <link rel="stylesheet" href="static/css/em-animation.css"/>
 </head>
 <body>
 
@@ -156,6 +159,9 @@
   <script src="test/mock/MockTagsBackendService.js"></script>
   <script src="test/mock/MockTasksBackendService.js"></script>
   <script src="test/mock/MockConvertBackendService.js"></script>
+
+  <script src="static/js/animo.min.js"></script>
+  <script src="static/js/em-animation.js"></script>
 
 </body>
 </html>
