--- a/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
@@ -1,6 +1,6 @@
 <div id="entry" class="container-master entry" ng-controller="EntryController" vertical-resize="entry">
   <div class="container-fluid">
-    <div class="swiper-container container-fluid--inner animate-fade-out"
+    <div class="swiper-container container-fluid--inner small-footer-height animate-fade-out"
     swiper-container="entry" swiper-type="main" expected-slides="3"
     swiper-container-slide-changed="entrySwiperSlideChanged(path, activeIndex)">
       <div class="swiper-wrapper">
