--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -25,6 +25,8 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
   <title>extended mind</title>
   <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/animate-animo.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/em-animation.css"/>
   <script src="cordova.js"></script>
   <script>
     var packaging = "ios-cordova";
@@ -53,5 +55,7 @@
 <body onload="onLoad()">
   <div class="ios" root-view></div>
   <script src="static/${project.version}/em.min.js"></script>
+  <script src="static/${project.version}/js/animo.min.js"></script>
+  <script src="static/${project.version}/js/em-animation.js"></script>
 </body>
 </html>
