Onboard only focus tasks and calendar. Small tutorial related fixes.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -77,7 +77,7 @@
     </div>
   </section>
   <footer class="container-content--after group-btn em-animation-background">
-    <button class="btn-action" ng-click="swipeToNewUser()">
+    <button class="btn-action" ng-click="startTutorial()">
       <span class="text-btn">new user</span>
     </button>
     <button class="btn-action" ng-click="swipeToLogin()">
