--- a/frontend/core/src/main/webapp/static/app/user/userEditor.html
+++ b/frontend/core/src/main/webapp/static/app/user/userEditor.html
@@ -18,6 +18,10 @@
 
       <div class="row" ng-if="!agendaCalendarEnabled">
         <span class="text-details">press enable to see your calendars here</span>
+        <!-- ONBOARDING -->
+        <span ng-if="onboardingInProgress && !isOnboarded('agendaCalendar')" class="text-details">
+          </br>or press back to skip this step
+        </span>
       </div>
 
       <div ng-if="agendaCalendarEnabled && calendars">
