--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -61,7 +61,7 @@
       <span class="text-navigation-menu-small">trash</span>
     </a>
     <a href class="link-menu row onboarding-hide" ng-click="gotoFeature('settings')"
-      ng-class="isFeatureActive('setting') ? 'highlighted' : 'downplayed'">
+      ng-class="isFeatureActive('settings') ? 'highlighted' : 'downplayed'">
       <span class="text-navigation-menu-small">settings</span>
     </a>
   </div>
