Changed store into keep

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -137,7 +137,7 @@
       <div id="em-animation-13" class="hide">
         <span id="em-animation-13-focus" class="hidden animation-word">focus</span>
         <span id="em-animation-13-organize" class="hidden animation-word">organize</span>
-        <span id="em-animation-13-store" class="hidden animation-word">store</span>
+        <span id="em-animation-13-keep" class="hidden animation-word">keep</span>
       </div>
       <div id="em-animation-14" class="hide">
         <span>this is not a piece of software</span>
