--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -58,7 +58,7 @@
           <div id="em-animation-13" class="hide">
             <span id="em-animation-13-focus" class="hidden animation-word">focus</span>
             <span id="em-animation-13-organize" class="hidden animation-word">organize</span>
-            <span id="em-animation-13-store" class="hidden animation-word">store</span>
+            <span id="em-animation-13-keep" class="hidden animation-word">keep</span>
           </div>
           <div id="em-animation-14" class="hide">
             <span>this is not a piece of software</span>
@@ -121,7 +121,7 @@
     <div class="table row">
       <div class="table-row" style="vertical-align: middle;">
         <a class="table-cell" style="text-align: left;" href="itms://itunes.com/apps/extendedmind">
-          <img ng-src="/{{urlBase}}img/download-app-store@2x.png" style="width: 120px;"/><br/>
+          <img ng-src="/{{urlBase}}img/download-app-keep@2x.png" style="width: 120px;"/><br/>
           <span class="text-details" style="padding-left: 10px;">iphone 4s or later</span>
         </a>
         <a class="table-cell" style="text-align: right;" href="market://details?id=org.extendedmind">
