Added animation (temporarily) to web version, to prevent failures

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -10,6 +10,8 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <title>extended mind</title>
   <link rel="stylesheet" href="/static/${project.version}/css/em.css"/>
+  <link rel="stylesheet" href="/static/${project.version}/css/animate-animo.css"/>
+  <link rel="stylesheet" href="/static/${project.version}/css/em-animation.css"/>
   <link rel="apple-touch-icon" sizes="57x57" href="/static/${project.version}/favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/static/${project.version}/favicon/apple-touch-icon-114x114.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/static/${project.version}/favicon/apple-touch-icon-72x72.png">
@@ -36,5 +38,7 @@
 <body>
   <div class="web" root-view></div>
   <script src="/static/${project.version}/em.min.js"></script>
+  <script src="/static/${project.version}/js/animo.min.js"></script>
+  <script src="/static/${project.version}/js/em-animation.js"></script>
 </body>
 </html>
