Agenda without disable button in settings. Bug fixes.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -343,12 +343,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
 
-            <a href ng-if="showAgenda && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
+            <a href ng-if="isAgendaVisible() && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[2].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div class="group-mixed with-checkbox">
@@ -393,12 +393,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
 
-            <a href ng-if="showAgenda && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
+            <a href ng-if="isAgendaVisible() && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[0].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div class="group-mixed with-checkbox">
@@ -443,12 +443,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
 
-            <a href ng-if="showAgenda && daySlides[1].info !== null" ng-hide="daySlidesInfosCleared"
+            <a href ng-if="isAgendaVisible() && daySlides[1].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[1].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[1].info) as agendaEvents track by agendaEvent.event_id">
                 <div class="group-mixed with-checkbox">
@@ -493,12 +493,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
 
-            <a href ng-if="showAgenda && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
+            <a href ng-if="isAgendaVisible() && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[2].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div class="group-mixed with-checkbox">
@@ -543,12 +543,12 @@
             <div class="animate-list-item-leave"
               ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
-            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="showAgenda"
+            <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]">
             </div>
 
-            <a href ng-if="showAgenda && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
+            <a href ng-if="isAgendaVisible() && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
               class="link agenda" ng-click="openCalendar(daySlides[0].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div class="group-mixed with-checkbox">
